--- a/indy.html
+++ b/indy.html
@@ -11,41 +11,10 @@
     <h1 class="overskrift">ANIMALS</h1> 
 
     <div id="hoved">
-        <ul>
-            <a id="dyr" onclick="showNextImage()">
-                <img id="dyrBilde" src="image1.jpg" alt="">
-            </a>
-            <a id="hund" href="hund.html">
-                <img src="hund.png" alt="hund">
-            </a>
-            <a id="katt" href="katt.html">
-                <img src="katt.png" alt="katt">
-            </a>
-            <a id="panda" href="panda.html">
-                <img src="panda.png" alt="panda">
-            </a>
-            <a id="krokodille" href="krokodil.html">
-                <img src="https://akamai.vgc.no/v2/images/e9c89d9c-ba45-4e9c-9dd9-64e78febd878?fit=crop&format=auto&h=563&w=834&s=3c75e2ac8bf2f1349c82ffc040c4150d93d18aaf" alt="krokodil">
-            </a>
-            <a id="slange" href="slange.html">
-                <img src="https://d189539ycils2q.cloudfront.net/media/catalog/product/1/4/14733-schleich-kobraslange.jpg" alt="">
-            </a>
-            <a id="hare" href="sirkel.html">
-                <img src="hest.png" alt="ape">
-            </a>
-            <a id="gorilla" href="ape.html">
-                <img src="ape.png" alt="ape">
-            </a>
-            <a id="elefant" href="elefant.html">
-                <img src="elefant.png" alt="elefant">
-            </a>
-            <a id="tiger" href="fisk.html">
-                <img src="fisk.png" alt="fisk">
-            </a>
-            <a id="hest" href="script.js">
-                <img src="gorilla.png" alt="">
-            </a>
-        </ul>
+        <div id="bildeContainer">
+            <img id="dyrBilde" src="bilder/hund.png">
+        </div>
+        <button onclick="showNextImage()">Vis Neste Dyr</button>
     </div>
 </body>
 </html>
