updated til random

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div id="bildeContainer">
             <img id="dyrBilde" src="bilder/hund.png">
         </div>
-        <button onclick="showNextImage()">Vis Neste Dyr</button>
+        <button onclick="showRandomImage()">Vis Neste Dyr</button>
     </div>
 </body>
 </html>
